[build-system]
requires = ["hatchling", "setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "hatchling.build"

[project]
name = "vbjax"
dynamic = ["version"]
authors = [
  { name="Marmaduke Woodman", email="marmaduke.woodman@univ-amu.fr" },
]
description = "Virtual brains w/ JAX"
readme = "README.md"
requries-python = ">=3.7"
dependencies = [
    "numpy",
    "jax",
    "jaxlib",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ins-amu/vbjax"
"Bug Tracker" = "https://github.com/ins-amu/vbjax/issues"

[tool.hatch.build]
include = [
    "vbjax/**",
]

[tool.setuptools_scm]
write_to = "vbjax/_version.py"

[tool.hatch.version]
path = "vbjax/_version.py"